# pawql

./: .gitignore  README.md
dashboard-ui/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.js
dashboard-ui/src/: App.tsx  index.css
dashboard-ui/src/components/: DashboardRenderer.tsx  DateSelector.tsx  ErrorMessage.tsx  LoadingSpinner.tsx  LocationSelector.tsx
dashboard-ui/src/config/: env.ts
dashboard-ui/src/services/: api.ts
dashboard-ui/src/types/: index.ts
ddn/: .gitignore  compose.yaml
ddn/.hasura/: context.yaml
ddn/app/: subgraph.yaml
ddn/app/metadata/: delete_learn_pql_public_adj_table.hml  delete_learn_pql_public_appointments.hml  delete_learn_pql_public_billing_data.hml  delete_learn_pql_public_boarding_stays.hml  delete_learn_pql_public_canine_data.hml  delete_learn_pql_public_config_settings.hml  delete_learn_pql_public_customers.hml  delete_learn_pql_public_dog_vaccinations.hml  delete_learn_pql_public_dogs.hml  delete_learn_pql_public_groom_legacy_import.hml  delete_learn_pql_public_groom_sessions.hml  delete_learn_pql_public_incident_reports.hml  (+98 more)
ddn/globals/: subgraph.yaml
evals/: README.md  evaluator.yaml  pyproject.toml
evals/evalsets/: easy_questions.yaml  hard_questions.yaml  medium_questions.yaml
evals/pawql_evals/: __init__.py  evaluator.py  markdown_renderer.py  models.py  runner.py
evals/runs/20250805_claude_4_sonnet/: config.yaml  easy_questions.md  hard_questions.md  medium_questions.md
evals/runs/first_run/: config.yaml  easy_questions.md  hard_questions.md  medium_questions.md
(+15 files in other folders)
